se corrige error

--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -2,8 +2,8 @@
     <div  class="ajustes container">
 
         <div class="formulario">
-            <form class="formularioPart" action="/products/" method="post" enctype='multipart/form-data'>
-                <legend>Agregar producto
+            <form id="formularioAddProd" class="formularioPart">
+                <legend class="tituloLegend">Agregar producto
                     <hr />
                 </legend>
                 <label htmlFor='title'> Title: </label>
@@ -25,8 +25,8 @@
                 </div>
             </form>
         </div>
-
-
+        <div><hr></div>
+        
 
         <h1>Lista de productos</h1>
         <table class="table table-bordered">
