--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -17,8 +17,8 @@
                 </thead>
                 <tbody class="table-group-divider">
                     {{#each product}}
-                        <tr key={{this.id}}>
-                            <td>{{this.id}}</td>
+                        <tr key={{this._id}}>
+                            <td>{{this._id}}</td>
                             <td>{{this.title}}</td>
                             <td>{{this.description}}</td>
                             <td>{{this.category}}</td>
