--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="css/{{style}}">
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/realTimeProducts">RealTimeProducts</a>
+              <a class="nav-link" href="/chat">chat</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      {{{body}}}
+    </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
   </body>
