--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -70,6 +70,90 @@
     margin-top: 5vh;
 }
 .nav-link{
-    font-size: 150%;
+    font-size: 120%;
     border-color: #687D77;
+
+}
+.navbar{
+    background-color: #ffffff;
+    padding: 0;
+    
+}
+
+.contenedorPrincipal{
+    background-color: #c1c1c11a;
+    margin-bottom: 80px;
+}
+
+.itemsNavBar{
+    display: flex;
+    justify-content: space-between;
+}
+#carrito{
+    display: flex;
+
+}
+#numerito{
+    text-decoration: none
+}
+.cart-user{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.user{
+    width: 50%;
+}
+
+.botonUser{
+    width: auto;
+    height: 50px;
+    background-color: rgba(74, 73, 73, 0.098);
+    
+}
+#usuario{
+    position: relative;
+    top:100px
+
+}
+
+.login{
+    width: 40vw;
+    margin: none;
+    background-color: #6d6d6d36;
+    border-radius: 10%;
+}
+.contendorLogin{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 80px;
+}
+.formularioLogin{
+    margin: 3vw;
+}
+.gitHubLogin{
+    width: 120px;
+}
+.btnGit{
+    background-color:rgb(255, 255, 255);
+    border-color: black;
+    color: black;
+}
+.btnLogin{
+    height: 50px;
+    width: 120px;
+}
+
+.ocultarElemento{
+    visibility: hidden;
+}
+.titleError{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.restore, .register{
+    display: flex;
+    flex-direction: row;
 }
