--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/{{style}}">
   </head>
   <body>
-    <div class="container p-0 contenedorPrincipal">
+    <div id="contenedorPrincipal" class="container p-0 contenedorPrincipal">
       <nav id="navBar" class=" rounded-bottom navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand p-0" href="#">
