--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,37 +1,13 @@
-<div class="container">
-    <div class="ajustes container">
-            <h1>Lista de productos</h1>
-            <table class="table table-bordered">
-                <thead class="encabezado">
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Title</th>             
-                        <th scope="col">Description</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Thumbnail</th>
-                        <th scope="col">Code</th>
-                        <th scope="col">Stock</th>
-                        <th scope="col">Status</th>
-                    </tr>
-                </thead>
-                <tbody class="table-group-divider">
-                    {{#each product}}
-                        <tr key={{this._id}}>
-                            <td>{{this._id}}</td>
-                            <td>{{this.title}}</td>
-                            <td>{{this.description}}</td>
-                            <td>{{this.category}}</td>
-                            <td>{{this.price}}</td>
-                            <td>{{this.thumbnail}}</td>
-                            <td>{{this.code}}</td>
-                            <td>{{this.stock}}</td>
-                            <td>{{this.status}}</td>
-                        </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+<div class="container contenedorSlogan">
+    <div class="slogan row justify-content-start">
+        <div class="subSlogan col-6">
+            <h1>BIENVENIDO A GOOD MARKET</h1>
+            <hr class="lineaSeparadora">
+            <h3>la tienda que tiene eso que buscas!</h3>
+            <h4>Comprúebalo tú mismo</h4>
         </div>
+       
     </div>
+    
 </div>
-<script src="/js/countCart.js"></script>
+<script src="/js/home.js"></script>
